#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([snap_basic], [0.0.1], [])
AC_CONFIG_SRCDIR([src/strings.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR # for linking non-posix archiver

LT_INIT # required to initialize libtool

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# AC_PROG_LIBTOOL

# AC_ENABLE_SHARED(yes)
# AC_ENABLE_STATIC(no)

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
