#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([stringsnap], [0.0.1], [])
AC_CONFIG_SRCDIR([src/strings.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign])
AM_PROG_AR # for linking non-posix archiver

# required to initialize libtool
LT_INIT 

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
