AUTOMAKE_OPTIONS = subdir-objects

# LDADD = -L/snap/stringsnap/current/lib -lstringsnap

bin_PROGRAMS = stringrunner

stringrunner_SOURCES = src/main.c
stringrunner_LDADD = -L/snap/stringsnap/current/lib -lstringsnap
# stringrunner_LDFLAGS = -L/snap/stringsnap/current/lib
# LDADD = /snap/stringsnap/current/lib/libstringsnap.so
